Fix zoom into focused editable when enable zoom-for-dsf

When zoom-for-dsf enabled, element_bound_in_document is in physical pixel;
however, minReadableCaretHeight is hard-coded css pixel value. So we need
to applied page zoom factor to the min caret height before calculate the
new page scale.

Bug: 848434
Change-Id: I3fe529032fbc380f4dc90a42a0fef532b79ba38b
Reviewed-on: https://chromium-review.googlesource.com/1085559
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568510}
Former-commit-id: b65e16f8cdabf8ea35a06d7ddf8db1c02330a918